fixed sizing on mobile

--- a/edgie/components/Link.module.css
+++ b/edgie/components/Link.module.css
@@ -3,7 +3,7 @@
   color: var(--title);
   padding: 0.5em;
   margin: 0.5em;
-  width: calc(100% - 0.7em);
+  width: calc(100% - 1em);
   border: 0.166em solid var(--title);
   padding-left: 7.5ch;
   position: relative;
